# logoust

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/commands/opsx/: archive.md
.claude/hooks/: effort_advisor.py
.claude/rules/: bot.md  docs.md  openspec.md  python.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_clients.py  0003_appointments.py  0004_working_days.py  0005_client_telegram_link.py  0006_recurring_appointments.py  0007_appointment_reminders.py  0008_subscriptions.py  0009_message_templates.py  0010_subscription_presets.py  0011_morning_digest.py  0012_audit_log.py  0013_deferred_client_notify.py  0014_multi_slot_recurring.py  0015_subscription_payment_reminder.py  0016_subscription_consumption.py
deploy/: logoust-assistant-backup.cron  logoust-assistant.service
docs/: README.md  architecture.md  bot.md  database.md  deployment.md  features.md
docs/decisions/: 2026-05-27_telegram_invite_onboarding.md  2026-06-04_appointment_time_in_utc_per_specialist_tz.md  2026-06-05_recurring_materialized_past_virtual_future.md
openspec/changes/add-specialist-invite-onboarding/: proposal.md  tasks.md
openspec/changes/add-vps-deploy/: design.md
openspec/specs/appointment-reminder/: spec.md
openspec/specs/appointments/: spec.md
openspec/specs/audit/: spec.md
scripts/: backup_db.sh  create_invite_prod.sh  deploy.sh  pull_backups.sh
src/: __main__.py  config.py  logging_setup.py
src/bot/: client_audit.py  client_templates.py  deeplink.py  dispatcher.py  messages.py  messages.toml  navigation.py  scheduler.py
src/cli/: create_invite.py
src/domain/: appointment.py  audit.py  client.py  deduction.py  message_template.py  recurring.py  reminder.py  schedule.py  scheduled_message.py  specialist.py  subscription.py
src/infrastructure/: appointments_repo.py  audit_repo.py  clients_repo.py  db.py  message_templates_repo.py  recurring_repo.py  reminders_repo.py  scheduled_messages_repo.py  specialists_repo.py  subscriptions_repo.py
src/services/: appointments.py  audit.py  clients.py  consumption.py  digest.py  invites.py  message_templates.py  payment_reminder.py  recurring.py  reminder.py  scheduled_messages.py  specialists.py  subscriptions.py
tests/: conftest.py  test_appointments_repo.py  test_appointments_series.py  test_appointments_service.py  test_audit_actions.py  test_audit_handlers.py  test_audit_repo.py  test_audit_service.py  test_cli_create_invite.py  test_clients_handlers.py  test_clients_normalize.py  test_clients_repo.py  test_clients_service.py  test_consumption_domain.py  test_consumption_service.py  test_db.py  test_digest_domain.py  test_digest_service.py  test_dispatcher.py  test_invites_service.py  test_logging_setup.py  test_message_template_domain.py  test_message_templates_repo.py  test_message_templates_service.py  test_messages.py  test_migration.py  test_navigation.py  test_payment_handlers.py  test_payment_reminder_domain.py  test_payment_reminder_service.py  test_recurring_handlers.py  test_recurring_repo.py  test_recurring_schedule.py  test_recurring_service.py  test_reminder_domain.py  test_reminder_service.py  test_reminders_handlers.py  test_reminders_repo.py  test_schedule_handlers.py  test_schedule_helpers.py  (+13 more)
(+133 files in other folders)
